# rsmalloc

./: CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  UPDATES.md  architecture.md  build.rs  build.sh
.cargo/: config.toml
benches/: speed.rs
benchmarks/: benchmark_overall.txt  benchmarks.md
src/: big_allocation.rs  global_alloc.rs  lib.rs  utility.rs
src/abi/: align.rs  calloc.rs  free.rs  malloc.rs  mod.rs  realloc.rs
src/big_allocations/: big_allocation.rs  buddy.rs  mod.rs
src/core_prim/: bootstrap.rs  fork.rs  mod.rs  predictor.rs  rseq_register.rs  wrappers.rs
src/inner/: align.rs  alloc.rs  calloc.rs  fallback.rs  free.rs  libc_int.rs  malloc.rs  mod.rs  realloc.rs
src/internals/: env.rs  hashmap.rs  l3_main_radix.rs  lock.rs  mod.rs  once.rs  oncelock.rs
src/rseq_core/: bulk_core.rs  bulk_fill.rs  mod.rs  rseq_cache.rs  rseq_core.rs  rseq_main.rs
tests/: global_test.rs  stress_correctness.rs
